# swfl-event-scraper

./: .gitignore  README.md  pyproject.toml
src/swfl_event_scraper/: __init__.py  cli.py  models.py  parsers.py  scrape.py  sources.py  storage.py
tests/: test_access_enrichment.py  test_access_metadata.py  test_capecoral_webtrac_reader.py  test_college_events.py  test_leegov_parks.py  test_leegov_time_ranges.py  test_librarymarket_real_shape.py  test_metrolagoons.py  test_parsers.py  test_scrape_enrichment.py  test_sources.py  test_storage.py  test_storage_migration.py  test_tribe_events.py
